--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,5 @@
-include ':spotify-auth-release-1.2.3'
-include ':spotify-app-remote-release-0.7.1'
+//include ':spotify-auth-release-1.2.3'
+//include ':spotify-app-remote-release-0.7.1'
 include ':app'
 include ':spotify-app-remote'
 include ':spotify-auth'
