--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  spotify_sdk: ^2.0.0
+  #spotify_sdk: ^2.0.0
+  
+  spotify_sdk:
+    git:
+      url: https://github.com/MartinTownley/spotify_sdk
+
+
   flutter_dotenv: ^4.0.0-nullsafety.0
   logger: ^1.0.0
 
